--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav a {
   color: #fff;
   text-decoration: none;
   font-weight: bold;
+  font-size: 20px;
 }
 nav a:hover {
   color: #b39ddb;
@@ -124,11 +125,11 @@ footer {
 }
 
 .icon {
-  height: 40px;
+  height: 50px;
 }
 .nav_h1 {
   display: flex;
-  font-size: 2em;
+  font-size: 3em;
   margin: 0;
 }
 
