--- a/style.css
+++ b/style.css
@@ -161,3 +161,15 @@ footer {
 main {
   min-height: 85vh;
 }
+
+.about_content {
+  background-image: url("./img/starryStar.gif");
+  background-size: cover;
+  opacity: 0.8; /* 設置透明度，範圍 0 (完全透明) 到 1 (完全不透明) */
+  width: 100vw; /* 設置寬度為視窗的 100% */
+  height: 100vh; /* 設置高度為視窗的 100% */
+  position: relative; /* 確保定位上下文 */
+  object-fit: contain;
+  text-align: center;
+  color:#fff
+}
