--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ main {
   background-image: url("./img/starryStar.gif");
   background-size: cover;
   opacity: 0.8; /* 設置透明度，範圍 0 (完全透明) 到 1 (完全不透明) */
-  
+  font-size: 2.5vh;
   text-align: center;
   color:#fff
 }
