--- a/style.css
+++ b/style.css
@@ -75,19 +75,27 @@ nav a:hover {
 }
 
 .confirmTips {
+  top:0;
   display: none;
   position: fixed;
   text-align: center;
-  width: 100%;
-  height: 100%;
+  width:100%;
+  height:100%;
   background-color: rgba(0, 0, 0, 0.4); 
 }
 .confirmTips-content {
   background-color: rgb(255,255,255);
-  margin: 15% auto;
+  margin: 20% 30%;
   padding: 20px;
-  width: 80%;
   border-radius: 10px;
+}
+.cartTips {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 .category-panel {
   display: none;
