--- a/style.css
+++ b/style.css
@@ -168,6 +168,14 @@ footer {
   align-content: center;
 }
 
+.logined{
+  display: none;
+}
+
+.unlogined{
+  display: flex;
+  flex-wrap: wrap;
+}
 
 
 
